--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,12 +20,26 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version: ~1.21.5
-          check-latest: true
+          go-version: "stable"
 
-      - name: Build binary
+      - name: Install Ruby (for fpm)
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.0'
+
+      - name: Install fpm
         run: |
-          make build
+          gem install fpm
+
+      - name: Build binary & Debian package
+        run: |
+          make build debian
+
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: debian-packages
+          path: "*.deb"
 
       - name: Log in to the GitHub container registry
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -39,7 +53,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/amd64,linux/arm64
