feat: Garbage collect unused devices & folders
Fixes #3, fixes #4

--- a/etc/configd.conf.sample
+++ b/etc/configd.conf.sample
@@ -49,3 +49,9 @@ pattern {
         id: "images"
     }
 }
+
+# garbage_collect {
+#     run_every_s: 86400;
+#     unseen_devices_days: 90;
+#     unshared_folders: true;
+# }
