fix: correct build tags

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -44,7 +44,7 @@ jobs:
           short=$(git describe --tags --abbrev=0)
           export version="${descr#v}"
           if [[ $descr == $short ]]; then
-            minor="${version#*.}"
+            minor="${version%.*}"
             major="${version%%.*}"
             ko build --bare --sbom=none -t edge -t latest -t "$version" -t "$minor" -t "$major" ./cmd/syncthing-configd
           else
